feat: cadastro de cardapio, mesa, comanda e end points associados